<resources>
    <string name="more_bind_device">绑定设备</string>
    <string name="more_chooese_device">发送照片</string>
    <string name="bind_device_id">设备ID</string>
    <string name="bind_nickname">设备名称</string>
    <string name="ha_fa_no_camera_premission">可能没有获取到相机的权限，请打开允许我们打开相机</string>
    <string name="cx_fa_role_app_name">小家</string>
    <string name="cx_fa_role_app_name_s">小家</string>
    <string name="cx_fa_nls_chat">聊天</string>
    <string name="cx_fa_nls_clock">提醒</string>
    <string name="cx_fa_nls_neighbour">亲友</string>
    <string name="cx_fa_nls_space">相册</string>
    <string name="cx_fa_nls_zone_title">我家相册</string>
    <string name="cx_fa_nls_finance_recorder">记账</string>
    <string name="cx_fa_nls_neighbour_homepage">亲友们</string>
    <string name="cx_fa_nls_settings">设置</string>
    <string name="cx_fa_nls_more">更多</string>
    <string name="cx_fa_nls_account">记账</string>
    <string name="cx_fa_nls_add_reminder">新建提醒</string>
    <string name="cx_fa_nls_edit_reminder">编辑提醒</string>
    <string name="cx_fa_nls_today">今日</string>
    <string name="cx_fa_nls_reminder_content">提醒内容</string>
    <string name="cx_fa_nls_reminder_target">提醒对象</string>
    <string name="cx_fa_nls_reminder_period">周期</string>
    <string name="cx_fa_nls_reminder_date">日期</string>
    <string name="cx_fa_nls_reminder_time">时间</string>
    <string name="cx_fa_nls_reminder_advance">提前</string>
    <string name="cx_fa_nls_reminder_period_0">提醒一次</string>
    <string name="cx_fa_nls_reminder_period_1">每天一次</string>
    <string name="cx_fa_nls_reminder_period_2">每周一次</string>
    <string name="cx_fa_nls_reminder_period_3">每月一次</string>
    <string name="cx_fa_nls_reminder_period_4">每年一次</string>
    <string name="cx_fa_nls_reminder_period_5">自定义</string>
    <string name="cx_fa_nls_tip_reminder_title">请输入提醒内容 </string>
    <string name="cx_fa_nls_reminder_tip_today">今天</string>
    <string name="cx_fa_nls_reminder_tip_tomorrow">明天</string>
    <string name="cx_fa_nls_reminder_tip_after_tomorrow">后天</string>
    <string name="cx_fa_nls_reminder_tip_future_second_format">%d秒后</string>
    <string name="cx_fa_nls_reminder_tip_future_minute_format">%d分钟后</string>
    <string name="cx_fa_nls_reminder_tip_future_hour_format">%d小时后</string>
    <string name="cx_fa_nls_reminder_tip_future_format">%d天后</string>
    <string name="cx_fa_nls_reminder_tip_future_this_year">1年后</string>
    <string name="cx_fa_nls_reminder_tip_future_years">多年后</string>
    <string name="cx_fa_nls_reminder_tip_format"  formatted="false">%s提醒%s</string>
    <string name="cx_fa_role_reminder">老公</string>
    <string name="cx_fa_role_reminder_s">老婆</string>
    <string name="cx_fa_nls_capital_wife">老婆</string>
    <string name="cx_fa_nls_capital_husband">老公</string>
    <string name="cx_fa_nls_me">我</string>
    <string name="cx_fa_nls_myself">我自己</string>
    <string name="cx_fa_nls_us">双方</string>
    <string name="cx_fa_nls_reminder_everyday">每天</string>
    <string name="cx_fa_nls_reminder_everymon">一</string>
    <string name="cx_fa_nls_reminder_everytue">二</string>
    <string name="cx_fa_nls_reminder_everywed">三</string>
    <string name="cx_fa_nls_reminder_everythu">四</string>
    <string name="cx_fa_nls_reminder_everyfri">五</string>
    <string name="cx_fa_nls_reminder_everysat">六</string>
    <string name="cx_fa_nls_reminder_everysun">日</string>
    <string name="cx_fa_nls_reminder_everyweek">每周</string>
    <string name="cx_fa_nls_reminder_everymonth">每月</string>
    <string name="cx_fa_nls_reminder_everymonth_format" formatted="false">每月%d日</string>
    <string name="cx_fa_nls_reminder_everyyear_format" formatted="false">每年 %1$tm月%1$te日</string>
    <string name="cx_fa_nls_reminder_everyyear">每年</string>
    <string name="cx_fa_nls_reminder_workingdays">工作日</string>
    <string name="cx_fa_nls_reminder_customize_perfix">周</string>
    <string name="cx_fa_nls_reminder_customize_seperator">、</string>
    <string name="cx_fa_nls_reminder_mon">周一</string>
    <string name="cx_fa_nls_reminder_tue">周二</string>
    <string name="cx_fa_nls_reminder_wed">周三</string>
    <string name="cx_fa_nls_reminder_thu">周四</string>
    <string name="cx_fa_nls_reminder_fri">周五</string>
    <string name="cx_fa_nls_reminder_sat">周六</string>
    <string name="cx_fa_nls_reminder_sun">周日</string>
    <string name="cx_fa_nls_reminder_period_this_year_date_format" formatted="false">%1$tm月%1$te日</string>
    <string name="cx_fa_nls_reminder_period_date_format" formatted="false">%1$tY年%1$tm月%1$te日</string>
    <string name="cx_fa_nls_reminder_period_time_format" formatted="false">%1$tH:%1$tM</string>
    <string name="cx_fa_nls_pm" formatted="false">下午</string>
    <string name="cx_fa_nls_am" formatted="false">上午</string>
    <string name="cx_fa_nls_reminder_target_myself">提醒自己</string>
    <string name="cx_fa_nls_reminder_target_relatie">提醒对方</string>
    <string name="cx_fa_nls_reminder_target_both">提醒双方</string>
    <string name="cx_fa_nls_reminder_advance_none">无</string>
    <string name="cx_fa_nls_reminder_advance_15minutes">提前15分钟</string>
    <string name="cx_fa_nls_reminder_advance_1hour">提前1小时</string>
    <string name="cx_fa_nls_reminder_advance_1day">提前1天</string>
    <string name="cx_fa_nls_reminder_advance_3day">提前3天</string>
    <string name="cx_fa_nls_reminder_advance_5day">提前5天</string>
    <string name="cx_fa_nls_invalid_reminder_title">请输入内容</string>
    <string name="cx_fa_nls_reminder_label_date_advance" formatted="false">%s(%s)</string>
    <string name="cx_fa_nls_list_pull_down_to_refresh">下拉可以刷新&#8230;</string>
    <string name="cx_fa_nls_list_pull_up_to_refresh">上拉可以刷新&#8230;</string>
    <string name="cx_fa_nls_list_release_to_refresh">松开可以刷新&#8230;</string>
    <string name="cx_fa_nls_list_refreshing">正在刷新&#8230;</string>
    <string name="cx_fa_nls_reminder_no_reminder_tip1">还没有任何提醒</string>
    <string name="cx_fa_nls_reminder_no_reminder_tip2">试试看，跟%s告别忘事儿烦恼！</string>
    <string name="cx_fa_nls_reminder_invalid_date_for_creation">请检查您设置的时间是否有误</string>
    <string name="cx_fa_nls_button_text_add_reminder_now">马上添加提醒</string>
    <string name="cx_fa_reminder_checktime_legal_msg">请检查您设置的时间是否有误</string>
    <string name="cx_fa_reminder_is_save_data_msg">你已经修改了提醒数据，是否不保存就退出修改？</string>
    <string name="cx_fa_reminder_check_not_edit_msg">不能修改对方设置的提醒</string>
    <string name="cx_fa_role_reminder_birthday_tip">老公生日提醒</string>
    <string name="cx_fa_role_reminder_birthday_tip_s">老婆生日提醒</string>
    <string name="cx_fa_role_congratulation_s">我的验证码是%1$s</string>
    <string name="cx_fa_role_congratulation">我的验证码是%1$s</string>
    <string name="cx_fa_input_phone">请输入手机号，马上发出邀请</string>
    <string name="cx_fa_role_phnoe_num">老婆的手机号</string>
    <string name="cx_fa_role_phnoe_num_s">老公的手机号</string>
    <string name="cx_fa_invite_number_text">我的邀请码</string>
    <string name="cx_fa_getting_my_invitenumber">正在获取我的邀请码</string>
    <string name="cx_fa_pair_directly">马上开通</string>
    <string name="cx_fa_role_invite_text">邀请老公</string>
    <string name="cx_fa_role_invite_text_s">邀请老婆</string>
    <string name="cx_fa_role_invite_partner_text">赶快邀请老公安装</string>
    <string name="cx_fa_role_invite_partner_text_s">赶快邀请老婆安装</string>
    <string name="cx_fa_invite_to_own">开通</string>
    <string name="cx_fa_version_invite_note_work">老公老婆是一个家庭微信，两人互装后才能互通。</string>
    <string name="cx_fa_role_dimesionbar_show_text">让老公扫描二维码安装“小家”应用</string>
    <string name="cx_fa_role_dimesionbar_show_text_s">让老婆扫描二维码安装“小家”应用</string>
    <string name="cx_fa_invited_words">您已邀请</string>
    <string name="cx_fa_role_pair">老公</string>
    <string name="cx_fa_role_pair_s">老婆</string>
    <string name="cx_fa_chat_title_speak">说</string>
    <string name="cx_fa_setup_text">安装</string>
    <string name="cx_fa_role_pairsetup_versionname">“老婆”</string>
    <string name="cx_fa_role_pairsetup_versionname_s">“老公”</string>
    <string name="cx_fa_invited_word1">"应用，等</string>
    <string name="cx_fa_role_pair_gender">他</string>
    <string name="cx_fa_role_pair_gender_s">她</string>
    <string name="cx_fa_invited_word2">接受邀请后你俩就可以开始聊天啦。</string>
    <string name="cx_fa_invited_word3">请耐心等待，</string>
    <string name="cx_fa_invited_word4">正在安装</string>
    <string name="cx_fa_invited_word5">你也可以直接打电话告诉</string>
    <string name="cx_fa_invited_word6">去应用商店下载安装</string>
    <string name="cx_fa_invited_word7">应用，记得不要安装错哦！</string>
    <string name="cx_fa_net_not_active">没有可用的网络</string>
    <string name="cx_fa_net_err">网络请求失败</string>
    <string name="cx_fa_invited_text">已经邀请你</string>
    <string name="cx_fa_cancel_text">关闭</string>
    <string name="cx_fa_invite_word">开通</string>
    <string name="cx_fa_role_comingtext">老公即将驾到&#8230;&#8230;&#8230;</string>
    <string name="cx_fa_role_comingtext_s">老婆即将驾到&#8230;&#8230;&#8230;</string>
    <string name="cx_fa_confirm_text">确定</string>
    <string name="cx_fa_reminder_del_msg">确定删除吗？</string>
    <string name="cx_fa_reminder_delay_title">(延迟)</string>
    <string name="cx_fa_waiting_text">等待&#8230;&#8230;&#8230;</string>
    <string name="cx_fa_invite_faild">邀请结对失败</string>
    <string name="cx_fa_invite_nopairnumber">请填入邀请号码</string>
    <string name="cx_fa_invitenumber_paired">你邀请的号码已经结对，请填入其他号码</string>
    <string name="cx_fa_cancel_button_text">取消</string>
    <string name="cx_fa_head_img_text">我的头像</string>
    <string name="cx_fa_chat_bg_text">聊天背景</string>
    <string name="cx_fa_lock_pswd_text">锁屏密码</string>
    <string name="cx_fa_when_receive_chatmsg">收到聊天消息时</string>
    <string name="cx_fa_soud_text">发出声音</string>
    <string name="cx_fa_shock_text">发出震动</string>
    <string name="cx_fa_earphone_text">强制使用听筒播放语音消息</string>
    <string name="cx_fa_clear_imgcache">清除图片声音缓存</string>
    <string name="cx_fa_clear_chatrecord">清空聊天记录</string>
    <string name="cx_fa_user_protocol_text">用户协议</string>
    <string name="cx_fa_current_version_number">当前版本</string>
    <string name="cx_fa_no_need_update_version">当前版本已经是最新版</string>
    <string name="cx_fa_community">QQ交流群：168645131</string>
    <string name="cx_fa_copyright">Copyright@2014 兴财富汇.All Rights Reserved.</string>
    <string name="cx_fa_comfirm_send_text">确认发送</string>
    <string name="cx_fa_user_contact_hint">请输入您的联系QQ（选填）</string>
    <string name="cx_fa_delete_text">删除</string>
    <string name="cx_fa_communication_text">QQ交流群：168645131</string>
    <string name="cx_fa_copy_text"> | 复制  </string>
    <string name="cx_fa_dump_text"> | 转存到我家相册</string>
    <string name="cx_fa_role_invite_by_dx">通过短信邀请老公</string>
    <string name="cx_fa_role_invite_by_wx">通过微信邀请老公</string>
    <string name="cx_fa_role_invite_by_qr">让老公扫描二维码安装“小家”</string>
    <string name="cx_fa_to_help">功能介绍</string>
    <string name="cx_fa_accounting_category_out_athome">居家物业\n(房租房贷、物业/水电等)</string>
    <string name="cx_fa_accounting_category_out_traffic">交通通讯\n(打车、手机费、加油费等)</string>
    <string name="cx_fa_accounting_category_out_catering">餐饮零食\n(餐费、零食水果、油盐酱醋等)</string>
    <string name="cx_fa_accounting_category_out_entertainment">休闲娱乐\n(电影、K歌、旅游等)</string>
    <string name="cx_fa_accounting_category_out_shopping">商品购物\n(服装化妆品、数码、家居等)</string>
    <string name="cx_fa_accounting_category_out_education">医疗教育\n（求医、买药、读书、培训等）</string>
    <string name="cx_fa_accounting_category_out_financial">金融保险\n(证券基金、保险投资等)</string>
    <string name="cx_fa_accounting_category_out_gratitude">人情往来\n(请客、红白礼金、慈善捐款等)</string>
    <string name="cx_fa_accounting_category_in_wages_short">工资薪酬</string>
    <string name="cx_fa_accounting_category_in_award_short">奖金补贴</string>
    <string name="cx_fa_accounting_category_in_investment_short">投资理财</string>
    <string name="cx_fa_accounting_category_in_other_short">其它收入</string>
    <string name="cx_fa_accounting_account_me">自己</string>
    <string name="cx_fa_accounting_account_both">双方</string>
    <string name="cx_fa_setting_user_suggest">感谢您使用“小家”，请输入您的问题或建议</string>
</resources>