<?xml version="1.0" encoding="utf-8"?> <!-- 邀请对方的对话框界面 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:orientation="vertical"
    android:background="@android:color/white">

   <TextView android:id="@+id/invite_mate_by_sms"
       android:layout_width="match_parent" android:layout_height="wrap_content"
       android:text="@string/cx_fa_role_invite_by_dx"
       android:layout_marginTop="12dp" android:layout_marginBottom="3dp"/>
   <TextView android:id="@+id/invite_mate_by_wx"
       android:layout_width="match_parent" android:layout_height="wrap_content"
       android:text="@string/cx_fa_role_invite_by_wx"
       android:layout_marginTop="3dp" android:layout_marginBottom="3dp"
       />
   <TextView android:id="@+id/invite_mate_by_qr"
       android:layout_width="match_parent" android:layout_height="wrap_content"
       android:text="@string/cx_fa_role_invite_by_qr"
       android:layout_marginTop="3dp" android:layout_marginBottom="3dp"
       />
   <TextView android:id="@+id/invite_mate_cancel"
       android:layout_width="match_parent" android:layout_height="wrap_content"
       android:text="@string/cx_fa_cancel_button_text"
       android:layout_marginTop="3dp" android:layout_marginBottom="9dp"
       />

</LinearLayout>