<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    <LinearLayout 
        android:layout_width="290dp"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:padding="15dip"
    	android:layout_gravity="center_horizontal"
    	android:background="@drawable/neighbor_backwhite">
    	
         
        <LinearLayout 
           android:id="@+id/cx_fa_accounting_change_account_from"
         	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	    	><!-- android:visibility="gone" -->
          
        
            
		    <TextView	       
		        android:id="@+id/cx_fa_accounting_change_account_from_me"
		        android:background="@drawable/cx_fa_neighbour_reply_background" 
		        android:gravity="center_vertical"
		        android:textSize="15sp"
		        android:clickable="true"
		        android:textColor="#99000000"
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"	
		    	android:text="@string/cx_fa_accounting_account_me"/> 
		    	
		    <View 
		        android:layout_marginTop="5dip"
		        android:layout_marginBottom="5dip"
	          	android:layout_width="match_parent" 
	          	android:layout_height="1dp"
	          	android:background="#e4e4ea"/>
		    <TextView	       
		        android:id="@+id/cx_fa_accounting_change_account_from_opposite"
		        android:background="@drawable/cx_fa_neighbour_reply_background" 
		        android:gravity="center_vertical"
		        android:textSize="15sp"
		        android:clickable="true"
		        android:textColor="#99000000"
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"	
		    	android:text="@string/cx_fa_role_pair"/> 
		    	
		    <View 
		        android:layout_marginTop="5dip"
		        android:layout_marginBottom="5dip"
	          	android:layout_width="match_parent" 
	          	android:layout_height="1dp"
	          	android:background="#e4e4ea"/>
		    <TextView	       
		        android:id="@+id/cx_fa_accounting_change_account_from_both"
		        android:background="@drawable/cx_fa_neighbour_reply_background" 
		        android:gravity="center_vertical"
		        android:textSize="15sp"
		        android:clickable="true"
		        android:textColor="#99000000"
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"	
		    	android:text="@string/cx_fa_accounting_account_both"/> 


	    </LinearLayout>
        
	    
      <LinearLayout 
          
          android:id="@+id/cx_fa_accounting_change_account_categary_out"
         	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	    	>     <!-- android:visibility="gone" -->
		    <TextView	       
		        android:id="@+id/cx_fa_accounting_change_account_categary_dialog_out1"
		        android:background="@drawable/cx_fa_neighbour_reply_background" 
		        android:gravity="center_vertical"
		        android:textSize="15sp"
		        android:textColor="#99000000"
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"	
		    	android:text="@string/cx_fa_accounting_category_out_athome"/> 
		    	
		    <View 
		        android:layout_marginTop="5dip"
		        android:layout_marginBottom="5dip"
	          	android:layout_width="match_parent" 
	          	android:layout_height="1dp"
	          	android:background="#e4e4ea"/>
		    <TextView	 
		        android:id="@+id/cx_fa_accounting_change_account_categary_dialog_out2"      
		        android:background="@drawable/cx_fa_neighbour_reply_background" 
		        android:gravity="center_vertical"
		        android:textSize="15sp"
		        android:textColor="#99000000"
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"	
		    	android:text="@string/cx_fa_accounting_category_out_traffic"/> 
		    	
		    <View 
		        android:layout_marginTop="5dip"
		        android:layout_marginBottom="5dip"
	          	android:layout_width="match_parent" 
	          	android:layout_height="1dp"
	          	android:background="#e4e4ea"/>
		    <TextView	
		        android:id="@+id/cx_fa_accounting_change_account_categary_dialog_out3"       
		        android:background="@null" 
		        android:gravity="center_vertical"
		        android:textSize="15sp"
		        android:textColor="#99000000"
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"	
		    	android:text="@string/cx_fa_accounting_category_out_catering"/> 
		    	
		    <View 
		        android:layout_marginTop="5dip"
		        android:layout_marginBottom="5dip"
	          	android:layout_width="match_parent" 
	          	android:layout_height="1dp"
	          	android:background="#e4e4ea"/>
		    <TextView	
		        android:id="@+id/cx_fa_accounting_change_account_categary_dialog_out4"       
		        android:background="@null" 
		        android:gravity="center_vertical"
		        android:textSize="15sp"
		        android:textColor="#99000000"
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"	
		    	android:text="@string/cx_fa_accounting_category_out_entertainment"/> 
		    	
		    <View 
		        android:layout_marginTop="5dip"
		        android:layout_marginBottom="5dip"
	          	android:layout_width="match_parent" 
	          	android:layout_height="1dp"
	          	android:background="#e4e4ea"/>
		    <TextView	
		        android:id="@+id/cx_fa_accounting_change_account_categary_dialog_out5"       
		        android:background="@null" 
		        android:gravity="center_vertical"
		        android:textSize="15sp"
		        android:textColor="#99000000"
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"	
		    	android:text="@string/cx_fa_accounting_category_out_shopping"/> 
		    	
		    <View 
		        android:layout_marginTop="5dip"
		        android:layout_marginBottom="5dip"
	          	android:layout_width="match_parent" 
	          	android:layout_height="1dp"
	          	android:background="#e4e4ea"/>
		    <TextView	   
		        android:id="@+id/cx_fa_accounting_change_account_categary_dialog_out6"    
		        android:background="@null" 
		        android:gravity="center_vertical"
		        android:textSize="15sp"
		        android:textColor="#99000000"
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"	
		    	android:text="@string/cx_fa_accounting_category_out_education"/> 
		    	
		    <View 
		        android:layout_marginTop="5dip"
		        android:layout_marginBottom="5dip"
	          	android:layout_width="match_parent" 
	          	android:layout_height="1dp"
	          	android:background="#e4e4ea"/>
		    <TextView	
		        android:id="@+id/cx_fa_accounting_change_account_categary_dialog_out7"       
		        android:background="@null" 
		        android:gravity="center_vertical"
		        android:textSize="15sp"
		        android:textColor="#99000000"
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"	
		    	android:text="@string/cx_fa_accounting_category_out_financial"/> 
		    	
		    <View 
		        android:layout_marginTop="5dip"
		        android:layout_marginBottom="5dip"
	          	android:layout_width="match_parent" 
	          	android:layout_height="1dp"
	          	android:background="#e4e4ea"/>
		    <TextView	
		        android:id="@+id/cx_fa_accounting_change_account_categary_dialog_out8"       
		        android:background="@null" 
		        android:gravity="center_vertical"
		        android:textSize="15sp"
		        android:textColor="#99000000"
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"	
		    	android:text="@string/cx_fa_accounting_category_out_gratitude"/> 

	    	
	    </LinearLayout>
	    
       
      
      
      
      <LinearLayout 
           android:id="@+id/cx_fa_accounting_change_account_categary_in"
         	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	    	><!-- android:visibility="gone" -->
		    <TextView	 
		        android:id="@+id/cx_fa_accounting_change_account_categary_dialog_in1"             
		        android:background="@drawable/cx_fa_neighbour_reply_background" 
		        android:gravity="center_vertical"
		        android:textSize="15sp"
		        android:textColor="#99000000"
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"	
		    	android:text="@string/cx_fa_accounting_category_in_wages_short"/> 
		    	
		    <View 
		        android:layout_marginTop="5dip"
		        android:layout_marginBottom="5dip"
	          	android:layout_width="match_parent" 
	          	android:layout_height="1dp"
	          	android:background="#e4e4ea"/>
		    <TextView
		        android:id="@+id/cx_fa_accounting_change_account_categary_dialog_in2"  	       
		        android:background="@drawable/cx_fa_neighbour_reply_background" 
		        android:gravity="center_vertical"
		        android:textSize="15sp"
		        android:textColor="#99000000"
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"	
		    	android:text="@string/cx_fa_accounting_category_in_award_short"/> 
		    	
		    <View 
		        android:layout_marginTop="5dip"
		        android:layout_marginBottom="5dip"
	          	android:layout_width="match_parent" 
	          	android:layout_height="1dp"
	          	android:background="#e4e4ea"/>
		    <TextView	
		        android:id="@+id/cx_fa_accounting_change_account_categary_dialog_in3"         
		        android:background="@drawable/cx_fa_neighbour_reply_background" 
		        android:gravity="center_vertical"
		        android:textSize="15sp"
		        android:textColor="#99000000"
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"	
		    	android:text="@string/cx_fa_accounting_category_in_investment_short"/> 
		    	
		    <View 
		        android:layout_marginTop="5dip"
		        android:layout_marginBottom="5dip"
	          	android:layout_width="match_parent" 
	          	android:layout_height="1dp"
	          	android:background="#e4e4ea"/>
		    <TextView	
		        android:id="@+id/cx_fa_accounting_change_account_categary_dialog_in4"         
		        android:background="@drawable/cx_fa_neighbour_reply_background" 
		        android:gravity="center_vertical"
		        android:textSize="15sp"
		        android:textColor="#99000000"
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"	
		    	android:text="@string/cx_fa_accounting_category_in_other_short"/> 
		    	
		    
	    </LinearLayout>
    
	    	
	    
	    <LinearLayout 
	        android:layout_marginTop="10dip"
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content">
	    	
	        <Button
	            android:id="@+id/cx_fa_accounting_change_account_category_dialog_cancel" 
	            android:layout_weight="1"
	            android:layout_width="0dip"
	    		android:layout_height="wrap_content"
	    		style="@style/cx_fa_style_white_button_text"
	    		android:textSize="16sp"
	    		android:textColor="@color/cx_fa_co_reminder_tip_deep_gray"
	    		android:background="@drawable/neighbour_btnwhite"
	    		android:text="取消"/>
	       <!--  <Button 
	            android:id="@+id/nb_change_name_ok"
	            android:layout_weight="1"
	            android:layout_width="0dip"
	    		android:layout_height="wrap_content"
	    		style="@style/cx_fa_style_orange_button_text"
	    		android:textSize="16sp"
	    		android:textColor="@color/cx_fa_co_btn_brown_text"
	    		android:background="@drawable/neighbour_btnorange"
	    		android:text="确认"/> -->
	        
	        
	    </LinearLayout>
    
    </LinearLayout>
    
    

</LinearLayout>