<?xml version="1.0" encoding="utf-8"?><!-- 关于界面 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:orientation="vertical"
    android:layout_height="match_parent" android:background="#e4e4ea">
    <include layout="@layout/cx_fa_activity_title" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_weight="0"
        />
    <LinearLayout android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
	    android:layout_width="match_parent" android:orientation="vertical"
	    android:layout_height="match_parent" android:layout_weight="1"
	    android:gravity="center_horizontal" android:layout_gravity="center">
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
            android:minHeight="200dip" android:layout_marginTop="30dip"
            android:id="@+id/userSuggestionContent" android:hint="@string/cx_fa_setting_user_suggest"
            android:gravity="top|left" android:background="@drawable/navi_inputbox"
            />
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
            android:singleLine="true" android:layout_marginTop="10dip"
            android:id="@+id/userContactStr" android:hint="@string/cx_fa_user_contact_hint"
            android:background="@drawable/navi_inputbox"
            android:paddingLeft="10dp" android:paddingRight="10dp"
            />
        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/cx_fa_comfirm_send_text"
            android:id="@+id/sendSuggestionBtn" android:layout_marginTop="14dip"
            android:paddingTop="10dip" android:paddingBottom="10dip"
            android:textSize="20sp" android:gravity="center" 
            android:background="@drawable/btn_orange" 
            style="@style/cx_fa_style_orange_button_text"
            />
        
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
	    android:singleLine="true" android:textColor="@color/cx_fa_co_qq_text"
	    android:text="@string/cx_fa_communication_text"
	    android:layout_weight="0" android:layout_marginTop="30dp"
	    android:textSize="12dp"
	    />
        
        <TextView android:id="@+id/userSuggestionUid" 
            android:layout_width="wrap_content" android:layout_height="wrap_content"
	    android:singleLine="true" android:textColor="@color/cx_fa_co_qq_text"
	    android:text="您的UID:103"
	    android:layout_weight="0" android:layout_marginTop="10dp"
	    android:textSize="12dp"
	    />
    </LinearLayout>
    
</LinearLayout>